--- a/index.html
+++ b/index.html
@@ -41,45 +41,78 @@
     <link rel="stylesheet" href="assets/css/style.css" />
   </head>
 
-    <!-- Classes on body set to work with mt-auto on footer to ensure it always stays at the bottom of the page -->
+  <!-- Classes on body set to work with mt-auto on footer to ensure it always stays at the bottom of the page -->
   <body class="d-flex flex-column min-vh-100">
     <!-- Navigation -->
-     <div>Navigation</div>
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+      <div class="container">
+        <a class="navbar-brand" href="index.html">Navbar</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav ms-auto">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Services</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="game-library.html">Games</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Contact</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
 
     <!-- Header with carousel -->
     <header class="container">
-        <div class="row">
-            <div class="col-12 col-xl-6">Boardwalk Games intro text section</div>
-            <div class="col-12 col-xl-6">Carousel</div>
-        </div>
+      <div class="row">
+        <div class="col-12 col-xl-6">Boardwalk Games intro text section</div>
+        <div class="col-12 col-xl-6">Carousel</div>
+      </div>
     </header>
 
     <!-- Main selement to hold all key sections of the home page -->
     <main>
-    <!-- Service section -->
-        <section class="container">
-            <div class="row">
-                <div class="col-12">Services section heading</div>
-                <div class="col-12 col-md-6 col-xl-3">Services card</div>
-                <div class="col-12 col-md-6 col-xl-3">Services card</div>
-                <div class="col-12 col-md-6 col-xl-3">Services card</div>
-                <div class="col-12 col-md-6 col-xl-3">Services card</div>
-            </div>
-        </section>
+      <!-- Service section -->
+      <section class="container">
+        <div class="row">
+          <div class="col-12">Services section heading</div>
+          <div class="col-12 col-md-6 col-xl-3">Services card</div>
+          <div class="col-12 col-md-6 col-xl-3">Services card</div>
+          <div class="col-12 col-md-6 col-xl-3">Services card</div>
+          <div class="col-12 col-md-6 col-xl-3">Services card</div>
+        </div>
+      </section>
     </main>
 
     <!-- Footer / contact section -->
-     <footer class="mt-auto">
-       <div class="container">
+    <footer class="mt-auto">
+      <div class="container">
         <div class="row justify-content">
-            <div class="col-12">Contact section heading</div>
-            <!--Contact info -->
-            <div class="col-12 col-md-6 col-xl-4">Contact info and social links</div>
-            <!--Opening times -->
-            <div class="col-12 col-md-6 col-xl-4"></div>
+          <div class="col-12">Contact section heading</div>
+          <!--Contact info -->
+          <div class="col-12 col-md-6 col-xl-4">
+            Contact info and social links
+          </div>
+          <!--Opening times -->
+          <div class="col-12 col-md-6 col-xl-4"></div>
         </div>
-       </div> 
-     </footer>
+      </div>
+    </footer>
 
     <!-- Bootstrap JS -->
     <script
