--- a/index.html
+++ b/index.html
@@ -261,16 +261,32 @@
     </main>
 
     <!-- Footer / contact section -->
-    <footer class="mt-auto">
-      <div class="container">
-        <div class="row justify-content">
-          <div class="col-12">Contact section heading</div>
+    <footer id="contact" class="mt-auto">
+      <div class="container section">
+        <div class="row justify-content-center">
+          <div class="col-12 text-center">
+            <h2 class="display-6">Contact us!</h2>
+          </div>
           <!--Contact info -->
           <div class="col-12 col-md-6 col-xl-4">
-            Contact info and social links
+            <h3 class="sub-heading-color">Contact info</h3>
+          <address>
+            <strong><i class="fa-solid fa-location-pin"></i> Boardwalk Games</strong><br>
+            123 Boardwalk<br>
+            Boardwalk City, 12345 <br>
+          </address>
+          <p>
+            <i class="fa-solid fa-phone"></i> 012 345 6789<br>
+            <i class="fa-solid fa-paper-plane"></i> info@boardwalk-games.co
+          </p>
+          <div class="social-links mt-4">
+             <a href="https://www.instagram.com" target="_blank" aria-label="Visit out Instagram page (opens in new tab" rel="noopener")><i class="fa-brands fa-instagram"></i></a>
+             <a href="https://www.facebook.com" target="_blank" aria-label="Visit out Facebook page (opens in new tab" rel="noopener")><i class="fa-brands fa-facebook"></i></a>
+             <a href="https://www.x.com" target="_blank" aria-label="Visit out X feed (opens in new tab" rel="noopener")><i class="fa-brands fa-square-twitter"></i></a>          
           </div>
+        </div>
           <!--Opening times -->
-          <div class="col-12 col-md-6 col-xl-4"></div>
+          <div class="col-12 col-md-6 col-xl-4">Opening times</div>
         </div>
       </div>
     </footer>
